Refactor: Replace prefixed private fields with consistent naming, update nullability annotations, and simplify code across modules