@@ -15,9 +15,9 @@
  */
 package org.pageseeder.bridge.http;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 
 /**
@@ -32,12 +32,12 @@ public final class Parameter {
   /**
    * The parameter name (not URL encoded)
    */
-  private final String _name;
+  private final String name;
 
   /**
    * The parameter value (not URL encoded)
    */
-  private final String _value;
+  private final String value;
 
   /**
    * Create a new parameter
@@ -46,32 +46,27 @@ public final class Parameter {
    * @param value The parameter value (not URL encoded)
    */
   public Parameter(String name, String value) {
-    this._name = Objects.requireNonNull(name, "Parameter name must not be null");
-    this._value = Objects.requireNonNull(value, "Parameter value must not be null");
+    this.name = Objects.requireNonNull(name, "Parameter name must not be null");
+    this.value = Objects.requireNonNull(value, "Parameter value must not be null");
   }
 
   /**
    * @return The parameter name (not URL encoded)
    */
   public String name() {
-    return this._name;
+    return this.name;
   }
 
   /**
    * @return The parameter value (not URL encoded)
    */
   public String value() {
-    return this._value;
+    return this.value;
   }
 
   public void append(StringBuilder query) {
-    try {
-      query.append(URLEncoder.encode(this._name, "utf-8"));
-      query.append("=").append(URLEncoder.encode(this._value, "utf-8"));
-    } catch (UnsupportedEncodingException ex) {
-      // Should never happen as UTF-8 is supported
-      throw new RuntimeException();
-    }
+    query.append(URLEncoder.encode(this.name, StandardCharsets.UTF_8));
+    query.append("=").append(URLEncoder.encode(this.value, StandardCharsets.UTF_8));
   }
 
   @Override
@@ -83,19 +78,14 @@ public final class Parameter {
 
 
   public static Parameter newParameter(String parameter) {
-    try {
-      int e = parameter.indexOf('=');
-      if (e < 0) {
-        String name = URLDecoder.decode(parameter.substring(0, e), "utf-8");
-        return new Parameter(name, "");
-      } else {
-        String name = URLDecoder.decode(parameter.substring(0, e), "utf-8");
-        String value = URLDecoder.decode(parameter.substring(e+1), "utf-8");
-        return new Parameter(name, value);
-      }
-    } catch (UnsupportedEncodingException ex) {
-      // Should never happen as UTF-8 is always supported
-      throw new RuntimeException();
+    int e = parameter.indexOf('=');
+    if (e < 0) {
+      String name = URLDecoder.decode(parameter, StandardCharsets.UTF_8);
+      return new Parameter(name, "");
+    } else {
+      String name = URLDecoder.decode(parameter.substring(0, e), StandardCharsets.UTF_8);
+      String value = URLDecoder.decode(parameter.substring(e+1), StandardCharsets.UTF_8);
+      return new Parameter(name, value);
     }
   }
 
